--- a/lab-05/test/test-demo/Makefile
+++ b/lab-05/test/test-demo/Makefile
@@ -1,4 +1,5 @@
 all:
 	g++ barriers.cpp -lpthread -o barriers
+	g++ sum_mutex.cpp -lpthread -o sum_mutex
+	g++ sum_spin_lock.cpp -lpthread -o sum_spin_lock
 	g++ semaphore.cpp -lpthread -o semaphore
-	g++ test_sem.cpp -lpthread -o test_sem
