clean code assignment 2

--- a/Assignment2/implementation/.vscode/settings.json
+++ b/Assignment2/implementation/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdio.h": "c",
         "timer.h": "c",
-        "stdlib.h": "c"
+        "stdlib.h": "c",
+        "mem.h": "c"
     }
 }
