update code to clear code

--- a/Assignment2/backup-22-04-2018/Makefile
+++ b/Assignment2/backup-22-04-2018/Makefile
@@ -41,9 +41,9 @@ test_mem:
 	@echo ------ MEMORY MANAGEMENT TEST 0 ------------------------------------
 	./mem input/proc/m0
 	@echo NOTE: Read file output/m0 to verify your result
-	# @echo ------ MEMORY MANAGEMENT TEST 1 ------------------------------------
-	# ./mem input/proc/m1
-	# @echo 'NOTE: Read file output/m1 to verify your result (your implementation should print nothing)'
+	@echo ------ MEMORY MANAGEMENT TEST 1 ------------------------------------
+	./mem input/proc/m1
+	@echo 'NOTE: Read file output/m1 to verify your result (your implementation should print nothing)'
 
 test_sched:
 	@echo ------ SCHEDULING TEST 0 -------------------------------------------
@@ -54,12 +54,12 @@ test_sched:
 	@echo NOTE: Read file output/sched_1 to verify your result
 	
 test_os:
-	@echo ----- OS TEST 0 ----------------------------------------------------
-	./os os_0
-	@echo NOTE: Read file output/os_0 to verify your result
-	# @echo ----- OS TEST 1 ----------------------------------------------------
-	# ./os os_1
-	# @echo NOTE: Read file output/os_1 to verify your result
+	# @echo ----- OS TEST 0 ----------------------------------------------------
+	# ./os os_0
+	# @echo NOTE: Read file output/os_0 to verify your result
+	@echo ----- OS TEST 1 ----------------------------------------------------
+	./os os_1
+	@echo NOTE: Read file output/os_1 to verify your result
 
 $(OBJ)/%.o: %.c ${HEADER}
 	$(MAKE) $(CFLAGS) $< -o $@
